--- a/health_regression.ipynb
+++ b/health_regression.ipynb
@@ -26,117 +26,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "8a0cb8c8-0633-4935-b954-b0ed97eb0b79",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>health</th>\n",
-       "      <th>age</th>\n",
-       "      <th>educ</th>\n",
-       "      <th>female</th>\n",
-       "      <th>married</th>\n",
-       "      <th>income</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>5</td>\n",
-       "      <td>71</td>\n",
-       "      <td>10,5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2300</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>50</td>\n",
-       "      <td>10,5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>43</td>\n",
-       "      <td>11,5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4172</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>75</td>\n",
-       "      <td>10,5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>41</td>\n",
-       "      <td>15</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3600</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id  health  age  educ  female  married  income\n",
-       "0   1       5   71  10,5       1        1    2300\n",
-       "1   2       3   50  10,5       0        1    3000\n",
-       "2   3       4   43  11,5       1        1    4172\n",
-       "3   4       2   75  10,5       0        1    1200\n",
-       "4   5       5   41    15       1        1    3600"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df = pd.read_csv('C:/Users/alex/Desktop/New folder/health_data.csv', sep=';')\n",
-    "df.head()"
+    "df = pd.read_csv('health_data.csv', sep=';')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "7007b283-519d-47ae-b1c1-045c703aa283",
    "metadata": {},
    "outputs": [
@@ -268,7 +168,7 @@
        "max    12000.000000  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "15d78ac3-16a4-4808-b6e6-31d986a9ed1a",
    "metadata": {},
    "outputs": [
@@ -293,7 +193,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.136\n",
       "Method:                 Least Squares   F-statistic:                     16.69\n",
       "Date:                Thu, 26 Feb 2026   Prob (F-statistic):           2.99e-15\n",
-      "Time:                        11:57:15   Log-Likelihood:                -745.45\n",
+      "Time:                        12:27:55   Log-Likelihood:                -745.45\n",
       "No. Observations:                 500   AIC:                             1503.\n",
       "Df Residuals:                     494   BIC:                             1528.\n",
       "Df Model:                           5                                         \n",
@@ -334,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "04f3d15a-ab3a-4476-9b46-36db4179f2d3",
    "metadata": {},
    "outputs": [
@@ -348,7 +248,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.143\n",
       "Method:                 Least Squares   F-statistic:                     14.89\n",
       "Date:                Thu, 26 Feb 2026   Prob (F-statistic):           1.13e-15\n",
-      "Time:                        11:57:15   Log-Likelihood:                -742.85\n",
+      "Time:                        12:27:55   Log-Likelihood:                -742.85\n",
       "No. Observations:                 500   AIC:                             1500.\n",
       "Df Residuals:                     493   BIC:                             1529.\n",
       "Df Model:                           6                                         \n",
@@ -389,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "755309e7-22f4-44f4-b7f7-c06ca14460de",
    "metadata": {},
    "outputs": [
@@ -409,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "6b360549-596b-401c-a887-cbe8b8cd7405",
    "metadata": {},
    "outputs": [
@@ -423,7 +323,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.153\n",
       "Method:                 Least Squares   F-statistic:                     16.01\n",
       "Date:                Thu, 26 Feb 2026   Prob (F-statistic):           7.39e-17\n",
-      "Time:                        11:59:09   Log-Likelihood:                -739.96\n",
+      "Time:                        12:27:56   Log-Likelihood:                -739.96\n",
       "No. Observations:                 500   AIC:                             1494.\n",
       "Df Residuals:                     493   BIC:                             1523.\n",
       "Df Model:                           6                                         \n",
@@ -464,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "70e94f99-b9f0-4453-a18d-a6ba5aacf7ad",
    "metadata": {},
    "outputs": [
@@ -492,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "885f812e-1362-4fb1-a429-4d1044778830",
    "metadata": {},
    "outputs": [
